--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,10 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "CQ-editor"
-version = "0.6.1"
+version = "0.6.2"
 dependencies = [
   "cadquery",
+  "PyQt5",
   "pyqtgraph",
   "qtawesome==1.4.0",
   "path",
